# 2dgk

./: CMakeLists.txt  README.md
data/img/background/: clouds.txt  clouds2.txt  front.txt
data/level/: blocks.txt  l1.txt  labyrinth2.txt  labyrinth3.txt  map1.txt  platformer.txt  platformer1.txt  platformer2.txt  platformer3.txt  test1.txt  test2.txt
src/: Animation.h  Background.h  Block.h  Button.h  Camera.cpp  Camera.h  Circle.h  CollisionShape.h  GameManager.h  GuideArrow.h  Interface.h  Math.h  Physics.h  Player.cpp  Player.h  Signal.h  Signals.cpp  Signals.h  Util.h  WorldGenerator.cpp  WorldGenerator.h  main.cpp
